--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-
-	
-	<!-- <script src="./assets/bootstrap/bootstrap.bundle.js"></script> -->
 	<link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" as="style" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -48,13 +45,11 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
-	<div class="top-header">
-		<h3 class="name">Nina Carducci</h3>
+	<nav class="top-header">
+		<h1 class="name">Nina Carducci</h1>
 		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -65,8 +60,8 @@
 							src="assets/images/instagram.webp" alt="logo instagram" loading="lazy"></a></li>
 			</ul>
 		</div>
-	</div>
-	<div id="header">
+	</nav>
+	<header id="header">
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
@@ -104,17 +99,17 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-	</div>
+	</header>
 	<div id="about">
 		<div class="picture left">
 			<img src="./assets/images/nina.webp" srcset="./assets/images/nina-small.webp 400w"
 				alt="photo de Nina la photographe">
 		</div>
 		<div id="about-me">
-			<h3 class="about-me__title">A propos de moi</h3>
-			<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné.
+			<h2 class="about-me__title">A propos de moi</h2>
+			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné.
 				Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me
-				fait vibrer.</h6>
+				fait vibrer.</p>
 			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer
 				au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager
 				au plus grand nombre.
@@ -161,9 +156,9 @@
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est
+					<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est
 						traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en
-						photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+						photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
@@ -211,8 +206,8 @@
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou
-					une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+				<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou
+					une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
@@ -223,11 +218,11 @@
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 				<form action="" method="post">
-					<label>Nom</label>
+					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom">
-					<label>Email</label>
+					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
-					<label>Message</label>
+					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
